Fix page width being too long.

--- a/style.css
+++ b/style.css
@@ -133,7 +133,6 @@ body {
     display: flex;
     flex-direction: column;
     padding: 100px;
-    width: 100%;
 }
 
 .quote {
